fix ui align

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ header h1 {
   grid-template-columns: 1.2fr 1fr;
   gap: 3rem;
   padding: 3rem;
-  align-items: end;
+  align-items: start;
 }
 
 @media (max-width: 900px) {
